# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: qlty.yml
page_analyzer/: Makefile  README.md  app.py  build.sh  db.py  normalizer.py  parser.py  pyproject.toml  requirements.txt  url_repository.py
page_analyzer/hexlet_code.egg-info/: PKG-INFO  requires.txt
page_analyzer/static/css/: styles.css
page_analyzer/templates/: 404_page.html  base.html  form.html  index.html  url.html  url_details.html  urls.html  urls_list.html
