[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    {name = "gitfilin",email = "vy.filin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "page_analyzer" }
]